fix: lock height and width of icon button
affects: @entur/button

avoid overflowing size due to flex container

--- a/packages/button/src/IconButton.scss
+++ b/packages/button/src/IconButton.scss
@@ -10,6 +10,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 2.125rem;
+  width: 2.125rem;
   font-size: $font-sizes-large;
   padding: $space-extra-small;
   &:hover {
